# spbspu-labs-2023-aads-904-a

./: .config  .gitignore  .gitlab-ci.yml  README.md  input.txt
aksenov.egor/: functor.h
aksenov.egor/S0/: main.cpp
aksenov.egor/S1/: convertToPostfix.cpp  convertToPostfix.h  details.cpp  details.h  helpFunctions.cpp  list.h  main.cpp  mathOperations.cpp  mathOperations.h  out.h  queue.h  solvePostfixExpr.cpp  solvePostfixExpr.h  stack.h  stringToInfix.cpp  stringToInfix.h
aksenov.egor/S2/: Dictionary.h  ForwardIterator.h  List.h  commands.cpp  commands.h  constForwardIterator.h  forwardList.h  getDictFromInput.h  main.cpp
aksenov.egor/S4/: AVL.h  bidirectionalIterator.h  commands.h  constBidirectionalIterator.h  main.cpp  nonBalancedBinarySearchTree.h  tree.h
aksenov.egor/S5/: functor.cpp  functor.h  main.cpp  traverses.h
aksenov.egor/common/: Dictionary.h  ForwardIterator.h  List.h  checkOverflow.cpp  checkOverflow.h  commands.h  constForwardIterator.h  forwardList.h  getDictFromInput.h  queue.h  stack.h
azheganova.faina/S1/: calculate.cpp  calculate.h  calculations.cpp  calculations.h  checkdigit.cpp  checkdigit.h  checkingfordigit.cpp  checkingfordigit.h  convertfrominfixtopostfix.cpp  convertfrominfixtopostfix.h  converttoinfix.cpp  converttoinfix.h  main.cpp  node.h  operations.cpp  operations.h  priority.cpp  priority.h  queue.cpp  queue.h  stack.cpp  (+3 more)
mashkin.andrew/: const_AVL_reverse_iter.h
tarasenko.ksenia/S5/: CMakeLists.txt  filename  main.cpp  printer.h  readDataForTree.cpp  readDataForTree.h  result  summator.h
timofeev.maxim/: main.cpp
(+1021 files in other folders)
